# wegen-ai

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  on_fail.yml
docs/: 00_stack.md  01_Requisitos.md  02_architecture.md  03_execution_flow.md  04_metrics.md  05_weos_integration.md  documentation.md
docs/tests/: phase1.md
src/api/: cli.cpp
src/backend/: backend.h  backend_factory.cpp  backend_factory.h  tensor.h
src/backend/cpu/: cpu_backend.cpp  cpu_backend.h  dequant.cpp  ops.cpp  ops.h  ops_simd.cpp  ops_simd.h  quants.h
src/cli/: main.cpp
src/core/: context.h  engine.cpp  engine.h  execution_plan.h  version.h
src/metrics/: power_linux.cpp  power_linux.h
src/model/: autoregressive_generator.cpp  autoregressive_generator.h  gguf_inspector.cpp  gguf_inspector.h  gguf_loader.cpp  gguf_loader.h  model_descriptor.h  quantization_utils.cpp  quantization_utils.h  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h
src/scheduler/: scheduler.cpp  scheduler.h
tests/: performance.sh
